tests/NormalTests/paczka1/fuzzy1/26204313.err
Error in line 15: lfKFAuv A471 33,6
Error in line 22: M4M5RoroTY9 A471 74,69
Error in line 23: M4M5RoroTY9 A471 374,5
Error in line 21: 9EhfHF A471 16,1
Error in line 17: SffJ2k7 A471 85,1
Error in line 35: M4MFRoroTY9 S77F 27,9
Error in line 34: SffJ2k7 A204 47,6
